correction for click on mobile (google alert)

--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -25,7 +25,7 @@
     a {
       font-size: 1rem;
       color: $clr-text-light;
-      margin-right: 1rem;
+      margin-right: 1.5rem;
 
       &:hover {
         color: $clr-secondary;
